--- a/regex.html
+++ b/regex.html
@@ -516,14 +516,14 @@ ln -s /home/cs2041/public_html/lab/sh/dictionary/words.txt mywords
                             </li>
                             <li>
                                 Find the first word in the dictionary file ending with z.
-                                <div class="" style="color:green;">
+                                <div class="collapse" style="color:green;">
                                     <p><b>Answer:</b></p>
                                     Command: 1G then /z$ &nbsp; &nbsp; Word: Agassiz
                                 </div>
                             </li>
                             <li>
                                 Find the last word in the dictionary that contains the substring ooz.
-                                <div class="" style="color:green;"
+                                <div class="collapse" style="color:green;"
                                     <p><b>Answer:</b></p>
                                     Command: G then ?ooz &nbsp; &nbsp; Word: zoozoos
                                 </div>
@@ -532,7 +532,7 @@ ln -s /home/cs2041/public_html/lab/sh/dictionary/words.txt mywords
                         <li>There are a small number of English words that have all the vowels occuring in order. Find the first one of these using less, then quit the viewer (q command) and with the same regexp, use grep to find them all. Note: the word may contain more than 5 vowels but it must contain aeiou in that order.</li>
                         <ol type="a">
                             <li>Look at the output from the grep above. What are the first, the last and the longest words, which have all the vowels in this order, 'aeiou'?
-                                <div class="" style="color:green;">
+                                <div class="collapse" style="color:green;">
                                     <p><b>Answer:</b></p>
                                     Command: <code>grep 'a.*e.*i.*o.*u' mywords</code>
                                     Words:
@@ -546,7 +546,7 @@ valerianaceous
                                 </div>
                             </li>
                             <li>How many are there?
-                                <div class="" style="color:green;">
+                                <div class="collapse" style="color:green;">
                                     <p><b>Answer:</b></p>
                                     <p>Command: <code>grep 'a.*e.*i.*o.*u' mywords | wc</code></p>
                                     <pre>
@@ -555,7 +555,7 @@ valerianaceous
                                 </div>
                             </li>
                             <li><strong><em>Challenge</em></strong>, modify the regex so it matches only words containing exactly 5 vowels and the vowels are in order (aeiou).
-                                <div class="" style="color:green;">
+                                <div class="collapse" style="color:green;">
                                     <p><b>Answer:</b></p>
                                     <p>Command: <code>grep '^[^aeiou]*a[^aeiou]*e[^aeiou]*i[^aeiou]*o[^aeiou]*u[^aeiou]*$' mywords</code></p>
                                     <pre>
@@ -579,21 +579,21 @@ facetiously
                     questions.  Provide both the command/pipeline and its output.</p>
                     <ol type="a">
                         <li>How many total words does the file mywords contain?
-                            <div class="" style="color:green;">
+                            <div class="collapse" style="color:green;">
                                 <p><b>Answer:</b></p>
                                 Command: <code>wc -w mywords</code> <br>
                                 Output: 390582
                             </div>
                         </li>
                         <li>Note that some of these words are derivates of other words (e.g. "Aberdeen" and "Aberdeen's"). Maybe these shouldn't be included in the word count. How many total words, excluding those ending in "'s", are there in the dictionary?
-                            <div class="" style="color:green;">
+                            <div class="collapse" style="color:green;">
                                 <p><b>Answer:</b></p>
                                 Command: <code>grep -v "'s$" mywords | wc -w</code> <br>
                                 Output: 299845
                             </div>
                         </li>
                         <li>How could you use cat -n and grep to find out which word is on line 100000? (You'll need to check the exact output format of cat -n.)
-                            <div class="" style="color:green;">
+                            <div class="collapse" style="color:green;">
                                 <p><b>Answer:</b></p>
                                 Command: <code>cat -n mywords | grep '^100000'</code> <br>
                                 Output: 100000  adviser <br>
@@ -601,14 +601,14 @@ facetiously
                             </div>
                         </li>
                         <li>How could you use cat -n and grep to print the 700th line, and no other lines? (You'll need to check the exact output format of cat -n.)
-                            <div class="" style="color:green;">
+                            <div class="collapse" style="color:green;">
                                 <p><b>Answer:</b></p>
                                 Command: <code>cat -n mywords | grep '^ *700[^0-9]'</code> <br>
                                 Output:    700  Adirondack <br>
                             </div>
                         </li>
                         <li>How do you use head and tail to find out what word is on line 200000?
-                            <div class="" style="color:green;">
+                            <div class="collapse" style="color:green;">
                                 <p><b>Answer:</b></p>
                                 Command: <code>head -200000 mywords | tail -1</code> <br>
                                 Output: geodynamics's
